[package]
name = "beta_balancing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
RustQuant = { version = "0.0.42", features = ["data"] }
anyhow = "1.0.75"
futures = "0.3.30"
polars = "0.35.4"
tokio = "1.35.0"
yahoo_finance_api = "2.1.0"

rust-gecko = { git = "https://github.com/0xJepsen/rust-gecko.git", branch = "main" }