[package]
name = "beta_balancing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.31"
polars = "0.40.0"
tokio = { version = "1.41.1", features = ["full"] }
yahoo_finance_api = "2.1.0"

rust-gecko = { git = "https://github.com/0xJepsen/rust-gecko.git", branch = "main" }